--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+  <div class="navbar">
+  <h4><%= link_to "WikiArticles", articles_path %></h4>
+  <h4><%= link_to "New Article", new_article_path %></h4>
+</div>
     <%= yield %>
   </body>
 </html>
